# echo

./: .gitignore  CLAUDE.md  LICENSE  README.md  design_doc.md  float.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: index.html
echo-cli/: pyproject.toml
echo-cli/src/echo_cli/: database.py  listener.py  main.py  recorder.py
python-engine/: asr.py  build.sh  engine.py  postprocessor.py  pyproject.toml  requirements.txt  vad.py
rust-asr/: Cargo.toml  README.md
rust-asr/src/: audio.rs  decoder.rs  encoder.rs  hf.rs  lib.rs  main.rs  nn.rs  tokenizer.rs  weights.rs  whisper.rs
rust-asr/src/llm/: mod.rs  qwen3.rs
rust-asr/src/parakeet/: audio.rs  decoder.rs  encoder.rs  mod.rs
scripts/: build-macos-signed.sh  generate-icons.js  setup-dev.sh  stage-mlx-metallib.sh
src/: App.tsx  FloatApp.tsx  float.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: active_app.rs  audio_capture.rs  clipboard.rs  commands.rs  continuous.rs  database.rs  handy_keys.rs  hotkey.rs  input.rs  lib.rs  main.rs  transcription.rs  types.rs  vad.rs  wake_word.rs
src/components/: RecordingOverlay.tsx  SettingsPanel.tsx  SummaryModal.tsx  TranscriptionDisplay.tsx  TranscriptionHistory.tsx
src/hooks/: useContinuousListening.ts  useSummarize.ts  useTranscription.ts  useTranscriptionHistory.ts
src/lib/: format.ts  models.ts  prompts.ts  tauri.ts
src/styles/: globals.css
