[package]
name = "echo"
version = "0.1.0"
description = "Apple Silicon最適化されたオフライン音声入力デスクトップアプリケーション"
authors = ["Echo Team"]
edition = "2021"

[lib]
name = "echo_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri コア
tauri = { version = "2.0", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Tauri プラグイン
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-log = "2.0"

# オーディオ処理
cpal = "0.15"
hound = "3.5"

# キーボード/マウス制御
enigo = "0.6.1"

# ユーティリティ
anyhow = "1"
log = "0.4"
thiserror = "2"
dirs = "5"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
